Login page created

--- a/SmartTask/templates/login.html
+++ b/SmartTask/templates/login.html
@@ -95,7 +95,7 @@
 <body>
 
   <div class="login-box">
-    <h2>Task Manager Login</h2>
+    <h2>SPTM Login</h2>
 
     <form>
       <div class="input-group">
