Register page created

--- a/SmartTask/templates/register.html
+++ b/SmartTask/templates/register.html
@@ -94,7 +94,7 @@
 <body>
 
   <div class="register-box">
-    <h2>Create Account</h2>
+    <h2>Create New Account</h2>
 
     <form>
       <div class="input-group">
