Created and Updated views and url

--- a/SmartTask/templates/forgot.html
+++ b/SmartTask/templates/forgot.html
@@ -114,7 +114,7 @@
       <button class="reset-btn">Send Reset Link</button>
 
       <div class="links">
-        <a href="login.html">Back to Login</a>
+        <a href="">Back to Login</a>
       </div>
     </form>
   </div>
