--- a/SmartTask/templates/home.html
+++ b/SmartTask/templates/home.html
@@ -210,7 +210,7 @@
       </div>
 
       <div class="add-task">
-        <button>+ Add New Task</button>
+        <button>Manage Task </button>
       </div>
     </div>
 
