--- a/SmartTask/templates/register.html
+++ b/SmartTask/templates/register.html
@@ -120,7 +120,7 @@
       <button class="register-btn">Register</button>
 
       <div class="links">
-        <a href="#">Already have an account? Login</a>
+        <a href="/login/">Already have an account? Login</a>
       </div>
     </form>
   </div>
