--- a/SmartTask/templates/login.html
+++ b/SmartTask/templates/login.html
@@ -109,10 +109,11 @@
       </div>
 
       <button class="login-btn">Login</button>
+        
 
       <div class="links">
-        <a href="#">Forgot Password?</a> |
-        <a href="#">Create Account</a>
+        <a href="/forgot/">Forgot Password?</a> |
+        <a href="/register/">Create Account</a>
       </div>
     </form>
   </div>
