--- a/SmartTask/templates/login.html
+++ b/SmartTask/templates/login.html
@@ -97,19 +97,20 @@
   <div class="login-box">
     <h2>SPTM Login</h2>
 
-    <form>
+  <form method="POST">
+  {% csrf_token %}
       <div class="input-group">
         <label>Email</label>
-        <input type="email" placeholder="Enter your email" required>
+        <input type="email" name="email" required>
       </div>
 
       <div class="input-group">
         <label>Password</label>
-        <input type="password" placeholder="Enter your password" required>
+        <input type="password" name="password" required>
       </div>
 
-      <button class="login-btn">Login</button>
-        
+      <button class="login-btn" type="submit">Login</button>
+
 
       <div class="links">
         <a href="/forgot/">Forgot Password?</a> |
